fixed overlap issues

--- a/interface/app/assets/stylesheets/showSlide.scss
+++ b/interface/app/assets/stylesheets/showSlide.scss
@@ -290,7 +290,7 @@
     width: 100svw;
     padding-bottom: 20svw;
     margin-top: 80svh;
-    z-index: 4;
+    z-index: 2;
   
   }
   .bottomtext {
@@ -300,6 +300,8 @@
     padding-top: 3svh;
     overflow-y: scroll;
     position: fixed;
+    margin-top:80svh;
+    margin-left:10svw;
     width: 80svw;
     z-index: 4;
   }
